build with middleman

--- a/index.html
+++ b/index.html
@@ -1,42 +1,112 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <!-- Use title if it's in the page YAML frontmatter -->
-        <title>HTML5 Boilerplate Middleman</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]> <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]> ><! <![endif]-->
+<html class='no-js'>
+  <!-- <![endif] -->
+  <head>
+    <meta charset='utf-8'>
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <title>About | "fnkSS"</title>
+    <meta content='' name='description'>
+    <meta content='width=device-width' name='viewport'>
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link href='assets/stylesheets/application.css' rel='stylesheet'>
+    <script src='js/vendor/modernizr-2.6.1.min.js'></script>
+  </head>
+  <body>
+    <div id='main'>
+      <div id='header'>
+        <div class='row'>
+          <div class='col-lg-12'>
+            <h1 class='header-logo'>
+              fnk<span class='bold'>SS</span><span class='small'>
+                Style Guide Genelator
+              </span>
+            </h1>
+            <h2 class='main-copy reset'>
+              fnkSS is style guide generator for the project with the Rails and HAML.
+            </h2>
+          </div>
+        </div>
+        <div class='row required-tools'>
+          <div class='col-lg-4'>
+            <div class='tool'>
+              <h2 class='tool-name'>Rails</h2>
+              aaaaa
+            </div>
+          </div>
+          <div class='col-lg-4'>
+            <div class='tool'>
+              <h2 class='tool-name'>Haml</h2>
+              aaaaa
+            </div>
+          </div>
+          <div class='col-lg-4'>
+            <div class='tool'>
+              <h2 class='tool-name'>Sass</h2>
+              aaaaa
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class='home' id='content'>
+        <div class='row'>
+          <a href="/">Getting Started</a>
+        </div>
+      </div>
+    </div>
+    <div id='sidebar'>
+            <a class="sidebar-logo circle block-link" href="/">fnk<span class='bold'>SS</span></a>
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+<nav id='global-nav'>
+        <ul class='reset'>
+          <li>
+                        <a class="block-link current" href="/"><i class='icon-home'></i>
+            About
+            </a>
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.1.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
-        <![endif]-->
+          </li>
+          <li>
+                        <a class="block-link" href="/"><i class='icon-cloud-download'></i>
+            Getting Started
+            </a>
 
-        <!-- Add your site or application content here -->
-<p>Hello world! This is HTML5 Boilerplate.</p>
+          </li>
+          <li>
+                        <a class="block-link" href="/"><i class='icon-wrench'></i>
+            Usage
+            </a>
 
+          </li>
+          <li>
+                        <a class="block-link" href="/"><i class='icon-github-alt'></i>
+            Source Code
+            </a>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+          </li>
+          <li>
+                        <a class="block-link" href="/"><i class='icon-github-alt'></i>
+            Issues
+            </a>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <script src='//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js'></script>
+    <script>
+      window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')
+    </script>
+    <script src='js/plugins.js'></script>
+    <script src='js/main.js'></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+      g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+      s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script>
+  </body>
 </html>
