--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-    <title>About | "fnkSS"</title>
+    <title>Getting Started | "fnkSS"</title>
     <meta content='' name='description'>
     <meta content='width=device-width' name='viewport'>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -17,59 +17,61 @@
   </head>
   <body>
     <div id='main'>
-      <div class='header' id='home-header'>
+      <div class='header' id='header'>
         <img class="header-image" src="assets/images/header.png" />
-        <div class='header-inner center-column'>
+        <div class='header-inner'>
           <div class='row'>
             <div class='col-lg-12'>
-              <h1 class='header-logo'>
-                fnk<span class='bold'>SS</span><span class='small'>
-                  Style Guide Genelator
-                </span>
+                            <a class="reset header-small-logo" href="/"><span class='hide'>
+                fnkss
+              </span>
+              </a>
+
+              <h1 class='reset header-page-title'>
+                Getting Started
               </h1>
-              <h2 class='main-copy reset'>
-                fnkSS is style guide generator for the project with the Rails and HAML.
-              </h2>
-            </div>
-          </div>
-          <div class='row required-tools'>
-            <div class='col-lg-4'>
-              <div class='tool'>
-                <h2 class='tool-name'>Rails</h2>
-                aaaaa
-              </div>
-            </div>
-            <div class='col-lg-4'>
-              <div class='tool'>
-                <h2 class='tool-name'>Haml</h2>
-                aaaaa
-              </div>
-            </div>
-            <div class='col-lg-4'>
-              <div class='tool'>
-                <h2 class='tool-name'>Sass</h2>
-                aaaaa
-              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class='home' id='content'>
-        <div class='row'>
-          <div class='col-lg-6'>
+      <div class='gettingstarted' id='content'>
+        <header class='row process-header'>
+          <div class='col-lg-12'>
+            <h1>導入手順</h1>
+          </div>
+        </header>
+        <div class='row process-body'>
+          <div class='col-lg-12'>
+            <h2 class='number-title'>
+              <span class='number'>1</span>
+              Gemfile
+            </h2>
+          </div>
+          <div class='col-lg-4'>
             <p>
-              fnkss は kss をカスタマイズした nkss をさらにカスタマイズしたスタイルシートのためのスタイルガイドジェネレーターです。
+              fnkSS を導入したい Rails プロジェクトの Gemfile の development に fnkss を追加（※fnkSS のテンプレートは Haml記法で書かれているので、もしHamlを導入していない場合はhamlも追加）。
             </p>
           </div>
-          <div class='col-lg-6'>
-            <p>
-              Ruby on Rails で作られた Haml
-            </p>
+          <div class='col-lg-8'>
+            <pre><code>gem 'haml'&#x000A;gem 'nkss-rails', github: 'nadarei/nkss-rails'</code></pre>
           </div>
         </div>
         <div class='row'>
-          <div class='col-lg-4 col-lg-offset-4'>
-            <a class="large-button" href="/gettingstarted">Getting Started</a>
+          <div class='col-lg-12'>
+            <h2 class='number-title'>
+              <span class='number'>2</span>
+              Genelate fnkSS
+            </h2>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-lg-4'>
+            <p>
+              fnkSS を導入したい Rails プロジェクトの Gemfile の development に fnkss を追加（※fnkSS のテンプレートは Haml記法で書かれているので、もしHamlを導入していない場合はhamlも追加）。
+            </p>
+          </div>
+          <div class='col-lg-8'>
+            <pre><code>$ bundle exec rails generate nkss:install</code></pre>
           </div>
         </div>
       </div>
@@ -80,12 +82,12 @@
     <nav id='global-nav'>
         <ul class='reset'>
           <li></li>
-                <a class="block-link current" href="/"><i class='icon-home'></i>
+                <a class="block-link" href="/"><i class='icon-home'></i>
           Home
           </a>
     
           <li>
-                    <a class="block-link" href="/gettingstarted.html"><i class='icon-cloud-download'></i>
+                    <a class="block-link current" href="/gettingstarted.html"><i class='icon-cloud-download'></i>
             Getting Started
             </a>
     
